--- a/components/layout/styles.scss
+++ b/components/layout/styles.scss
@@ -29,12 +29,19 @@
       margin-top: 75px;
       margin-bottom: 150px;
 
+
+
       h2 {
         font-family: $font-family-2;
-        font-size: 64px;
+        font-size: 40px;
         font-weight: 300;
         letter-spacing: 0;
-        line-height: 74px;
+        line-height: 53px;
+
+        @media screen and (min-width: map-get($flexboxgrid-breakpoints, md)) {
+          font-size: 64px;
+          line-height: 74px;
+        }
       }
 
       img {
